fix: images not showing on deployed site and js script not connecting. This is a file path issue discovered before and this fix should work

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Universal Styling & Styling that Occurs on all pages*/
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Noto+Sans+Syloti+Nagri&family=VT323&display=swap');
 body {
-    background: url(/assets/images/stardew-bg.jpg);
+    background: url(assets/images/stardew-bg.jpg);
     font-family: 'Noto Sans Syloti Nagri', sans-serif;
     color: #fff;
     text-align: center;
